--- a/documents/report_two/report_2.tex
+++ b/documents/report_two/report_2.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{lscape}
 \title{Report 2}
 \author{Emerson Schryver}
 \begin{document}
