--- a/project.tex
+++ b/project.tex
@@ -440,12 +440,15 @@ in the housing market, whether in lending markets (Quillian, Lee,
 Honoré, 2020), or in real estates continuing to practice ``racial
 steering'', the process of, whether knowing it or not, primarily showing
 people of minority groups neighborhoods that are also primarily of that
-minority group (Glenn, 2018)
+minority group (Glenn, 2018). 
 
-This paper seeks to contribute to this literature by analyzing the
-modern accuracy of the perceived link that 50's era blockbusting relied
-on -- do minority move-ins suppress home-value appreciation? I use loan
-data from Fannie Mae (FNMA) \& Freddie Mac (FHLMC) to provide data on
+This paper seeks to contribute literature surrounding economic effects of racism 
+by analyzing the modern accuracy of the perceived link that 50's era blockbusting relied
+on -- do minority move-ins suppress home-value appreciation?
+
+There is a long theoretical literature on discrimination, intiially starting with a model for taste-based discrimination by Gary Becker in 1957. There now many other models for discrimination, including most famously Ken Arrow's 1973 'statistical discriminination', but Becker's remains the most commonly used. There are also many theoretical frameworks for home sale matching, (Badarinza, Balasubramaniam, Ramadorai, 2024), but there have been few attempts to link the two. The sole notable attempt was in (Combs, et al, 2015), which built a theoretical framework for racism in home sales and lease arrangements, and then empirically tested the lease framework. This has been extended to look at a case in Moscow, where much of the racial discirmination is overt (Avetian, 2022)
+
+This paper contributes to this literature by applying this theoretical framework to home sales, and, in particular, analyzing the long-term effects on home values. I use loan data from Fannie Mae (FNMA) \& Freddie Mac (FHLMC) to provide data on
 neighborhood move-ins, American Community Survey data to normalize, and
 Zillow ZHVI data to show the change in home prices. My study has the
 following methodology:
@@ -470,6 +473,8 @@ home-value appreciation is unclear, relative to the metropolitan
 statistical area. While the mean home value appreciation does decrease
 in the treatment group relative to the control, there is an incredibly
 high degree of variation in the data.
+
+For regressions, I find that predictive quality is not meaningfully improved when controlling for previous neighborhood demographics, neighborhood income, or neighborhood political affiliation, and that there is not sufficient information to conclude there is a correlation between change in minority move-ins and home-value appreciation.
 
     \subsection{Data Loading}\label{data-loading}
 
@@ -855,30 +860,25 @@ property value), and our outcome variable (final property value)
 \PY{n+nb}{print}\PY{p}{(}\PY{n}{latex\PYZus{}code}\PY{p}{)}
 \end{Verbatim}
 \end{tcolorbox}
-
-    \begin{Verbatim}[commandchars=\\\{\}]
-\textbackslash{}begin\{table\}
-\textbackslash{}caption\{Table 2: Summary Statistics of Home Value Changes by Year\}
-\textbackslash{}label\{tab:summary\_stats\}
-\textbackslash{}begin\{tabular\}\{lrrrr\}
-\textbackslash{}toprule
- \& Minority Move-Ins (Initial Period) \& Minority Move-Ins (Treatment Period) \&
-Total Move-Ins (Initial Period) \& Total Move-Ins (Treatment Period) \textbackslash{}\textbackslash{}
-\textbackslash{}midrule
-\textbackslash{}textbf\{Count\} \& 33503 \& 33503 \& 33503 \& 33503 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Mean\} \& 0 \& 5 \& 12 \& 62 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Standard Deviation\} \& 3 \& 15 \& 37 \& 148 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Minimum\} \& 0 \& 0 \& 0 \& 0 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{25th Percentile\} \& 0 \& 0 \& 0 \& 0 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Median\} \& 0 \& 0 \& 0 \& 0 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{75th Percentile\} \& 0 \& 2 \& 2 \& 46 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Maximum\} \& 91 \& 423 \& 641 \& 1961 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Range\} \& 91 \& 423 \& 641 \& 1961 \textbackslash{}\textbackslash{}
-\textbackslash{}bottomrule
-\textbackslash{}end\{tabular\}
-\textbackslash{}end\{table\}
-
-    \end{Verbatim}
+\begin{table}[H]
+    \caption{Table 1: Minority Move-ins}
+    \label{tab:summary_stats}
+    \begin{tabular}{lrrrr}
+    \toprule
+     & Minority Move-Ins (Initial Period) & Minority Move-Ins (Treatment Period) & Total Move-Ins (Initial Period) & Total Move-Ins (Treatment Period) \\
+    \midrule
+    \textbf{Count} & 33503 & 33503 & 33503 & 33503 \\
+    \textbf{Mean} & 0 & 5 & 12 & 62 \\
+    \textbf{Standard Deviation} & 3 & 15 & 37 & 148 \\
+    \textbf{Minimum} & 0 & 0 & 0 & 0 \\
+    \textbf{25th Percentile} & 0 & 0 & 0 & 0 \\
+    \textbf{Median} & 0 & 0 & 0 & 0 \\
+    \textbf{75th Percentile} & 0 & 2 & 2 & 46 \\
+    \textbf{Maximum} & 91 & 423 & 641 & 1961 \\
+    \textbf{Range} & 91 & 423 & 641 & 1961 \\
+    \bottomrule
+    \end{tabular}
+    \end{table}
 
     This table shows one of the difficulties of the project, many
 majority-white zip codes inside of metropolitan areas either do not have
@@ -929,43 +929,13 @@ conclusion.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-\textbackslash{}begin\{table\}
-\textbackslash{}caption\{Table 2: Summary Statistics of Home Value Changes by Year\}
-\textbackslash{}label\{tab:summary\_stats\}
-\textbackslash{}begin\{tabular\}\{lrrrrrrrr\}
-\textbackslash{}toprule
-Statistic \& count \& mean \& std \& min \& 25\% \& 50\% \& 75\% \& max \textbackslash{}\textbackslash{}
-\textbackslash{}midrule
-\textbackslash{}textbf\{Home Value Change 2011\} \& 11376 \& 0.0016247048 \& 0.0374922147 \&
--0.2958426044 \& -0.0149016569 \& 0.0037850691 \& 0.0212805146 \& 0.2751080621 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Home Value Change 2012\} \& 11376 \& 0.0017263872 \& 0.0587131500 \&
--0.4129991416 \& -0.0257580976 \& 0.0037738711 \& 0.0329998513 \& 0.3739313507 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Home Value Change 2013\} \& 11376 \& -0.0004507613 \& 0.0782088702 \&
--0.4971158210 \& -0.0383841286 \& 0.0004044510 \& 0.0394929862 \& 0.6301143492 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Home Value Change 2014\} \& 11376 \& -0.0004639764 \& 0.0961599439 \&
--0.6182239429 \& -0.0479633900 \& -0.0024051145 \& 0.0442027638 \& 0.8238266667 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Home Value Change 2015\} \& 11376 \& -0.0000004792 \& 0.1192476985 \&
--0.6584162317 \& -0.0598912895 \& -0.0052687133 \& 0.0505795264 \& 1.1285729465 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Home Value Change 2016\} \& 11376 \& -0.0011199274 \& 0.1438792266 \&
--0.7404533667 \& -0.0726374485 \& -0.0091603750 \& 0.0549890764 \& 1.4749786318 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Home Value Change 2017\} \& 11376 \& -0.0009987269 \& 0.1723638395 \&
--0.8326666156 \& -0.0873361990 \& -0.0124782546 \& 0.0610003913 \& 1.7767701095 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Home Value Change 2018\} \& 11376 \& -0.0005756675 \& 0.2089468849 \&
--0.9294100050 \& -0.1023257038 \& -0.0174591246 \& 0.0695864139 \& 2.3199046610 \textbackslash{}\textbackslash{}
-\textbackslash{}textbf\{Home Value Change 2019\} \& 11376 \& 0.0004322245 \& 0.2312401624 \&
--1.0061741397 \& -0.1133050321 \& -0.0198231905 \& 0.0783373547 \& 2.7325700728 \textbackslash{}\textbackslash{}
-\textbackslash{}bottomrule
-\textbackslash{}end\{tabular\}
-\textbackslash{}end\{table\}
-
-    \end{Verbatim}
-    \begin{table}
+   
+    \begin{table}[H]
         \caption{Table 2: Summary Statistics of Home Value Changes by Year}
         \label{tab:summary_stats}
         \begin{tabular}{lrrrrrrrr}
         \toprule
-        Statistic & count & mean & std & min & 25% & 50% & 75% & max \\
+        Statistic & count & mean & std & min & 25\% & 50\% & 75\% & max \\
         \midrule
         \textbf{Home Value Change 2011} & 11376 & 0.0016247048 & 0.0374922147 & -0.2958426044 & -0.0149016569 & 0.0037850691 & 0.0212805146 & 0.2751080621 \\
         \textbf{Home Value Change 2012} & 11376 & 0.0017263872 & 0.0587131500 & -0.4129991416 & -0.0257580976 & 0.0037738711 & 0.0329998513 & 0.3739313507 \\
@@ -979,7 +949,7 @@ Statistic \& count \& mean \& std \& min \& 25\% \& 50\% \& 75\% \& max \textbac
         \bottomrule
         \end{tabular}
         \end{table}
-        
+             
     It should not be surprising that the median and mean are basically zero.
 Recall that we are normalizing home-value change to the metropolitan
 area's home-value change. It should also be unsurprising that the ranges
@@ -1015,30 +985,21 @@ will drop the zip codes without Zillow data.
 \end{Verbatim}
 \end{tcolorbox}
 
-    
-    \begin{Verbatim}[commandchars=\\\{\}]
-<pandas.io.formats.style.Styler at 0x22af1b2a650>
-    \end{Verbatim}
-    # Create summary statistics for income-related columns
-    income_summary = data_table[['med_hh_inc', 'per_cap_inc', 'gini_index']].describe()
-    
-    # Rename columns for better readability
-    income_summary.columns = ['Median Household Income', 'Per Capita Income', 'Gini Index']
-    
-    # Format numbers to be more readable
-    income_summary['Median Household Income'] = income_summary['Median Household Income'].round(2)
-    income_summary['Per Capita Income'] = income_summary['Per Capita Income'].round(2)
-    income_summary['Gini Index'] = income_summary['Gini Index'].round(4)
-    
-    # Display the table with styling
-    styled_table = income_summary.style.set_caption("Table 3: Income Statistics by Zip Code")
-    
-    # Apply table styles
-    styled_table = styled_table.set_table_attributes('style="width: 50%; margin: auto;"')
-    
-    # Display the table
-    print(styled_table.to_latex())
-    
+\begin{table}[H]
+    \caption{Table 3: Income Statistics by Zip Code}
+    \begin{tabular}{lrrr}
+     & Median Household Income & Per Capita Income & Gini Index \\
+    count & 30600.000000 & 33045.000000 & 33501.000000 \\
+    mean & 73148.450000 & -8293391.340000 & -24078882.794100 \\
+    std & 31357.090000 & 74068228.620000 & 124391551.390800 \\
+    min & 2499.000000 & -666666666.000000 & -666666666.000000 \\
+    25\% & 53481.500000 & 28256.000000 & 0.369800 \\
+    50\% & 67017.000000 & 35231.000000 & 0.415400 \\
+    75\% & 85313.000000 & 44613.000000 & 0.458300 \\
+    max & 250001.000000 & 419459.000000 & 1.000000 \\
+    \end{tabular}
+\end{table}
+
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{22}{\boxspacing}
 \begin{Verbatim}[commandchars=\\\{\}]
@@ -1082,40 +1043,22 @@ will drop the zip codes without Zillow data.
     \begin{Verbatim}[commandchars=\\\{\}]
 <pandas.io.formats.style.Styler at 0x22b000f1f30>
     \end{Verbatim}
-    # Update the variable names based on your data
-    demographic_summary = data_table[['total_pop', 'white', 'pct_rep']].describe().round(2)
-    
-    # Create summary statistics for demographic-related columns
-    demographic_summary.columns = ['Total Population', 'White Population', 'Pct Republican']
-    demographic_summary.index = ['Count', 'Mean', 'Standard Deviation', 'Minimum', '25th Percentile', 'Median', '75th Percentile', 'Maximum']
-    demographic_summary.loc['Range'] = demographic_summary.loc['Maximum'] - demographic_summary.loc['Minimum']
-    demographic_summary.loc['Count'] = demographic_summary.loc['Count'].astype(int)
-    
-    # Styling
-    styled_demographics = demographic_summary.style.set_caption("Table 4: Demographic Statistics by Zip Code")
-    
-    # Apply table styles
-    styled_demographics = styled_demographics.set_table_attributes('style="width: 70%; margin: auto;"')
-    
-    # Apply formatting
-    demographic_summary['Total Population'] = demographic_summary['Total Population'].astype(int)
-    demographic_summary['White Population'] = demographic_summary['White Population'].astype(int)
-    demographic_summary['Pct Republican'] = demographic_summary['Pct Republican'].astype(int)
-    
-    # Caption formatting
-    styled_demographics = styled_demographics.set_table_styles([{
-        'selector': 'caption',
-        'props': [
-            ('caption-side', 'top'),
-            ('font-size', '20px'),
-            ('font-style', 'italic'),
-            ('text-align', 'center'),
-            ('color', '#222')
-        ]
-    }])
-    
-    print(styled_demographics.to_latex())
-    
+
+    \begin{table}[H]
+        \caption{Table 4: Demographic Statistics by Zip Code}
+        \begin{tabular}{lrrr}
+         & Total Population & White Population & Pct Republican \\
+        Count & 33503 & 33503 & 13268 \\
+        Mean & 126305 & 69805 & 0 \\
+        Standard Deviation & 297884 & 151441 & 0 \\
+        Minimum & 1 & 1 & 0 \\
+        25th Percentile & 1149 & 919 & 0 \\
+        Median & 8688 & 6824 & 0 \\
+        75th Percentile & 95961 & 59662 & 0 \\
+        Maximum & 6094116 & 2829875 & 0 \\
+        Range & 6094115 & 2829874 & 0 \\
+        \end{tabular}
+    \end{table}
     
     \subsection{Plots \& Figures}\label{plots-figures}
 
@@ -1620,7 +1563,7 @@ and/or tight\_layout; not calling subplots\_adjust.
 \end{tcolorbox}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{project_files/project_71_0.png}
+    \adjustimage{max size={0.9\linewidth}{0.6\paperheight}}{project_files/project_71_0.png}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -1664,25 +1607,25 @@ relationship.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}2189008107.py:2:
-SettingWithCopyWarning:
-A value is trying to be set on a copy of a slice from a DataFrame.
-Try using .loc[row\_indexer,col\_indexer] = value instead
+%     \begin{Verbatim}[commandchars=\\\{\}]
+% C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}2189008107.py:2:
+% SettingWithCopyWarning:
+% A value is trying to be set on a copy of a slice from a DataFrame.
+% Try using .loc[row\_indexer,col\_indexer] = value instead
 
-See the caveats in the documentation: https://pandas.pydata.org/pandas-
-docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
-  reg\_data['white\_x\_early\_late\_ratio'] = reg\_data['white'] *
-reg\_data['early\_late\_ratio']
-C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}2189008107.py:3:
-SettingWithCopyWarning:
-A value is trying to be set on a copy of a slice from a DataFrame.
-Try using .loc[row\_indexer,col\_indexer] = value instead
+% See the caveats in the documentation: https://pandas.pydata.org/pandas-
+% docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
+%   reg\_data['white\_x\_early\_late\_ratio'] = reg\_data['white'] *
+% reg\_data['early\_late\_ratio']
+% C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}2189008107.py:3:
+% SettingWithCopyWarning:
+% A value is trying to be set on a copy of a slice from a DataFrame.
+% Try using .loc[row\_indexer,col\_indexer] = value instead
 
-See the caveats in the documentation: https://pandas.pydata.org/pandas-
-docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
-  reg\_data['intercept'] = 1
-    \end{Verbatim}
+% See the caveats in the documentation: https://pandas.pydata.org/pandas-
+% docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
+%   reg\_data['intercept'] = 1
+%     \end{Verbatim}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{36}{\boxspacing}
@@ -1696,29 +1639,30 @@ docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
 
             \begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
 \prompt{Out}{outcolor}{36}{\boxspacing}
-\begin{Verbatim}[commandchars=\\\{\}]
-<IPython.core.display.HTML object>
-\end{Verbatim}
-\begin{table}[!htbp] \centering
+% \begin{Verbatim}[commandchars=\\\{\}]
+% <IPython.core.display.HTML object>
+% \end{Verbatim}
+\setlength{\tabcolsep}{3pt} % Reduce column spacing
+\begin{table}[H] \centering
     \begin{tabular}{@{\extracolsep{5pt}}lcccc}
     \\[-1.8ex]\hline
     \hline \\[-1.8ex]
-    & \multicolumn{4}{c}{\textit{Dependent variable: value_ratio_2017}} \
+    & \multicolumn{4}{c}{\textit{Dependent variable: value\_ratio\_2017}} \\
     \cr \cline{2-5}
-    \\[-1.8ex] & \multicolumn{4}{c}{Change in Average Home Value (%) (2010-2017)}  \\
-    \\[-1.8ex] & (1) & (2) & (3) & (4) \\
+    \\[-1.8ex] & \multicolumn{4}{c}{Change in Average Home Value (\%) (2010-2017)}  \\
+    \\[-1.8ex] & (0) & (1) & (2) & (3) \\
     \hline \\[-1.8ex]
-     early_late_ratio & 0.096$^{***}$ & 0.046$^{**}$ & 0.034$^{*}$ & 0.051$^{**}$ \\
+     early late ratio & 0.096$^{***}$ & 0.046$^{**}$ & 0.034$^{*}$ & 0.051$^{**}$ \\
     & (0.035) & (0.020) & (0.019) & (0.025) \\
      intercept & 1.336$^{***}$ & 0.133$^{***}$ & 0.170$^{***}$ & 0.133$^{***}$ \\
     & (0.003) & (0.010) & (0.010) & (0.010) \\
-     msa_avg_value_ratio_2019 & & 0.806$^{***}$ & 0.773$^{***}$ & 0.806$^{***}$ \\
+     msa avg value ratio 2019 & & 0.806$^{***}$ & 0.773$^{***}$ & 0.806$^{***}$ \\
     & & (0.007) & (0.006) & (0.007) \\
-     total_pop & & & 0.000$^{***}$ & \\
+     total pop & & & 0.000$^{***}$ & \\
     & & & (0.000) & \\
      white & & & -0.000$^{***}$ & \\
     & & & (0.000) & \\
-     white_x_early_late_ratio & & & & -0.000$^{}$ \\
+     white$\times$early late ratio & & & & -0.000$^{}$ \\
     & & & & (0.000) \\
     \hline \\[-1.8ex]
      Observations & 7732 & 7732 & 7732 & 7732 \\
@@ -1764,57 +1708,39 @@ characteristics}\label{neighborhood-income-characteristics}
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}2476887300.py:2:
-SettingWithCopyWarning:
-A value is trying to be set on a copy of a slice from a DataFrame.
-Try using .loc[row\_indexer,col\_indexer] = value instead
 
-See the caveats in the documentation: https://pandas.pydata.org/pandas-
-docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
-  reg\_data['gini\_x\_early\_late'] = reg\_data['gini\_index'] *
-reg\_data['early\_late\_ratio']
-C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}2476887300.py:3:
-SettingWithCopyWarning:
-A value is trying to be set on a copy of a slice from a DataFrame.
-Try using .loc[row\_indexer,col\_indexer] = value instead
-
-See the caveats in the documentation: https://pandas.pydata.org/pandas-
-docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
-  reg\_data['intercept'] = 1
-    \end{Verbatim}
-\begin{table}[!htbp] \centering
-\begin{tabular}{@{\extracolsep{5pt}}lccc}
-\\[-1.8ex]\hline
-\hline \\[-1.8ex]
-& \multicolumn{3}{c}{\textit{Dependent variable: value_ratio_2017}} \
-\cr \cline{2-4}
-\\[-1.8ex] & \multicolumn{3}{c}{Home Value Change (%) (2010-2017)}  \\
-\\[-1.8ex] & (1) & (2) & (3) \\
-\hline \\[-1.8ex]
- early_late_ratio & 0.042$^{**}$ & 0.045$^{**}$ & -0.005$^{}$ \\
-& (0.020) & (0.020) & (0.173) \\
- gini_index & & 0.041$^{}$ & 0.039$^{}$ \\
-& & (0.038) & (0.038) \\
- gini_x_early_late & & & 0.113$^{}$ \\
-& & & (0.384) \\
- intercept & 0.195$^{***}$ & 0.116$^{***}$ & 0.117$^{***}$ \\
-& (0.011) & (0.018) & (0.019) \\
- msa_avg_value_ratio_2019 & 0.815$^{***}$ & 0.806$^{***}$ & 0.806$^{***}$ \\
-& (0.006) & (0.007) & (0.007) \\
- per_cap_inc & -0.000$^{***}$ & & \\
-& (0.000) & & \\
-\hline \\[-1.8ex]
- Observations & 7730 & 7730 & 7730 \\
- $R^2$ & 0.674 & 0.664 & 0.664 \\
- Adjusted $R^2$ & 0.674 & 0.664 & 0.664 \\
- Residual Std. Error & 0.172 (df=7726) & 0.175 (df=7726) & 0.175 (df=7725) \\
- F Statistic & 5327.427$^{***}$ (df=3; 7726) & 5082.877$^{***}$ (df=3; 7726) & 3811.728$^{***}$ (df=4; 7725) \\
-\hline
-\hline \\[-1.8ex]
-\textit{Note:} & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\
-\end{tabular}
-\end{table}
+% \begin{table}[!htbp] \centering
+% \begin{tabular}{@{\extracolsep{5pt}}lccc}
+% \\[-1.8ex]\hline
+% \hline \\[-1.8ex]
+% & \multicolumn{3}{c}{\textit{Dependent variable: value ratio 2017}} \
+% \cr \cline{2-4}
+% \\[-1.8ex] & \multicolumn{3}{c}{Home Value Change (\%) (2010-2017)}  \\
+% \\[-1.8ex] & (1) & (2) & (3) \\
+% \hline \\[-1.8ex]
+%  early late ratio & 0.042$^{**}$ & 0.045$^{**}$ & -0.005$^{}$ \\
+% & (0.020) & (0.020) & (0.173) \\
+%  gini index & & 0.041$^{}$ & 0.039$^{}$ \\
+% & & (0.038) & (0.038) \\
+%  gini$\times$early late & & & 0.113$^{}$ \\
+% & & & (0.384) \\
+%  intercept & 0.195$^{***}$ & 0.116$^{***}$ & 0.117$^{***}$ \\
+% & (0.011) & (0.018) & (0.019) \\
+%  msa avg value ratio 2019 & 0.815$^{***}$ & 0.806$^{***}$ & 0.806$^{***}$ \\
+% & (0.006) & (0.007) & (0.007) \\
+%  per cap inc & -0.000$^{***}$ & & \\
+% & (0.000) & & \\
+% \hline \\[-1.8ex]
+%  Observations & 7730 & 7730 & 7730 \\
+%  $R^2$ & 0.674 & 0.664 & 0.664 \\
+%  Adjusted $R^2$ & 0.674 & 0.664 & 0.664 \\
+%  Residual Std. Error & 0.172 (df=7726) & 0.175 (df=7726) & 0.175 (df=7725) \\
+%  F Statistic & 5327.427$^{***}$ (df=3; 7726) & 5082.877$^{***}$ (df=3; 7726) & 3811.728$^{***}$ (df=4; 7725) \\
+% \hline
+% \hline \\[-1.8ex]
+% \textit{Note:} & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\
+% \end{tabular}
+% \end{table}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{38}{\boxspacing}
@@ -1832,26 +1758,26 @@ docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
 <IPython.core.display.HTML object>
 \end{Verbatim}
 \end{tcolorbox}
-\begin{table}[!htbp] \centering
+\begin{table}[H] \centering
     \begin{tabular}{@{\extracolsep{5pt}}lccc}
     \\[-1.8ex]\hline
     \hline \\[-1.8ex]
-    & \multicolumn{3}{c}{\textit{Dependent variable: value_ratio_2017}} \
+    & \multicolumn{3}{c}{\textit{Dependent variable: value ratio 2017}} \
     \cr \cline{2-4}
-    \\[-1.8ex] & \multicolumn{3}{c}{Home Value Change (%) (2010-2017)}  \\
-    \\[-1.8ex] & (1) & (2) & (3) \\
+    \\[-1.8ex] & \multicolumn{3}{c}{Home Value Change (\%) (2010-2017)}  \\
+    \\[-1.8ex] & (4) & (5) & (6) \\
     \hline \\[-1.8ex]
-     early_late_ratio & 0.042$^{**}$ & 0.045$^{**}$ & -0.005$^{}$ \\
+    MMI-share increase (treatment) & 0.042$^{**}$ & 0.045$^{**}$ & -0.005$^{}$ \\
     & (0.020) & (0.020) & (0.173) \\
-     gini_index & & 0.041$^{}$ & 0.039$^{}$ \\
+     Gini index & & 0.041$^{}$ & 0.039$^{}$ \\
     & & (0.038) & (0.038) \\
-     gini_x_early_late & & & 0.113$^{}$ \\
+     Gini$\times$MMI-share change & & & 0.113$^{}$ \\
     & & & (0.384) \\
      intercept & 0.195$^{***}$ & 0.116$^{***}$ & 0.117$^{***}$ \\
     & (0.011) & (0.018) & (0.019) \\
-     msa_avg_value_ratio_2019 & 0.815$^{***}$ & 0.806$^{***}$ & 0.806$^{***}$ \\
+     MSA avg appreciation & 0.815$^{***}$ & 0.806$^{***}$ & 0.806$^{***}$ \\
     & (0.006) & (0.007) & (0.007) \\
-     per_cap_inc & -0.000$^{***}$ & & \\
+     Income (per capita) & -0.000$^{***}$ & & \\
     & (0.000) & & \\
     \hline \\[-1.8ex]
      Observations & 7730 & 7730 & 7730 \\
@@ -1864,6 +1790,37 @@ docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
     \textit{Note:} & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\
     \end{tabular}
     \end{table}
+    % \begin{tabular}{@{\extracolsep{5pt}}lccc}
+    % \\[-1.8ex]\hline
+    % \hline \\[-1.8ex]
+    % & \multicolumn{3}{c}{\textit{Dependent variable: value ratio 2017}} \
+    % \cr \cline{2-4}
+    % \\[-1.8ex] & \multicolumn{3}{c}{Home Value Change (\%) (2010-2017)}  \\
+    % \\[-1.8ex] & (1) & (2) & (3) \\
+    % \hline \\[-1.8ex]
+    %  early late ratio & 0.042$^{**}$ & 0.045$^{**}$ & -0.005$^{}$ \\
+    % & (0.020) & (0.020) & (0.173) \\
+    %  gini index & & 0.041$^{}$ & 0.039$^{}$ \\
+    % & & (0.038) & (0.038) \\
+    %  gini$\times$early late & & & 0.113$^{}$ \\
+    % & & & (0.384) \\
+    %  intercept & 0.195$^{***}$ & 0.116$^{***}$ & 0.117$^{***}$ \\
+    % & (0.011) & (0.018) & (0.019) \\
+    %  msa avg value ratio 2019 & 0.815$^{***}$ & 0.806$^{***}$ & 0.806$^{***}$ \\
+    % & (0.006) & (0.007) & (0.007) \\
+    %  per cap inc & -0.000$^{***}$ & & \\
+    % & (0.000) & & \\
+    % \hline \\[-1.8ex]
+    %  Observations & 7730 & 7730 & 7730 \\
+    %  $R^2$ & 0.674 & 0.664 & 0.664 \\
+    %  Adjusted $R^2$ & 0.674 & 0.664 & 0.664 \\
+    %  Residual Std. Error & 0.172 (df=7726) & 0.175 (df=7726) & 0.175 (df=7725) \\
+    %  F Statistic & 5327.427$^{***}$ (df=3; 7726) & 5082.877$^{***}$ (df=3; 7726) & 3811.728$^{***}$ (df=4; 7725) \\
+    % \hline
+    % \hline \\[-1.8ex]
+    % \textit{Note:} & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\
+    % \end{tabular}
+    % \end{table}
       
     This shi useless fr
 
@@ -1883,25 +1840,25 @@ docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}3143901554.py:2:
-SettingWithCopyWarning:
-A value is trying to be set on a copy of a slice from a DataFrame.
-Try using .loc[row\_indexer,col\_indexer] = value instead
+%     \begin{Verbatim}[commandchars=\\\{\}]
+% C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}3143901554.py:2:
+% SettingWithCopyWarning:
+% A value is trying to be set on a copy of a slice from a DataFrame.
+% Try using .loc[row\_indexer,col\_indexer] = value instead
 
-See the caveats in the documentation: https://pandas.pydata.org/pandas-
-docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
-  reg\_data['rep\_x\_early\_late'] = reg\_data['pct\_rep'] *
-reg\_data['early\_late\_ratio']
-C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}3143901554.py:3:
-SettingWithCopyWarning:
-A value is trying to be set on a copy of a slice from a DataFrame.
-Try using .loc[row\_indexer,col\_indexer] = value instead
+% See the caveats in the documentation: https://pandas.pydata.org/pandas-
+% docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
+%   reg\_data['rep\_x\_early\_late'] = reg\_data['pct\_rep'] *
+% reg\_data['early\_late\_ratio']
+% C:\textbackslash{}Users\textbackslash{}emers\textbackslash{}AppData\textbackslash{}Local\textbackslash{}Temp\textbackslash{}ipykernel\_19012\textbackslash{}3143901554.py:3:
+% SettingWithCopyWarning:
+% A value is trying to be set on a copy of a slice from a DataFrame.
+% Try using .loc[row\_indexer,col\_indexer] = value instead
 
-See the caveats in the documentation: https://pandas.pydata.org/pandas-
-docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
-  reg\_data['intercept'] = 1
-    \end{Verbatim}
+% See the caveats in the documentation: https://pandas.pydata.org/pandas-
+% docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
+%   reg\_data['intercept'] = 1
+%     \end{Verbatim}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{40}{\boxspacing}
@@ -1923,20 +1880,20 @@ docs/stable/user\_guide/indexing.html\#returning-a-view-versus-a-copy
     \begin{tabular}{@{\extracolsep{5pt}}lcc}
     \\[-1.8ex]\hline
     \hline \\[-1.8ex]
-    & \multicolumn{2}{c}{\textit{Dependent variable: value_ratio_2017}} \
+    & \multicolumn{2}{c}{\textit{Dependent variable: value ratio 2017}} \
     \cr \cline{2-3}
-    \\[-1.8ex] & \multicolumn{2}{c}{Home Value Change (%) (2010-2017)}  \\
-    \\[-1.8ex] & (1) & (2) \\
+    \\[-1.8ex] & \multicolumn{2}{c}{Home Value Change (\%) (2010-2017)}  \\
+    \\[-1.8ex] & (7) & (8) \\
     \hline \\[-1.8ex]
-     early_late_ratio & 0.037$^{*}$ & 0.051$^{}$ \\
-    & (0.020) & (0.054) \\
-     intercept & 0.236$^{***}$ & 0.133$^{***}$ \\
+    intercept & 0.236$^{***}$ & 0.133$^{***}$ \\
     & (0.013) & (0.010) \\
-     msa_avg_value_ratio_2019 & 0.787$^{***}$ & 0.806$^{***}$ \\
+     MMI-share increase (treatment) & 0.037$^{*}$ & 0.051$^{}$ \\
+    & (0.020) & (0.054) \\
+     MSA average appreciation & 0.787$^{***}$ & 0.806$^{***}$ \\
     & (0.007) & (0.007) \\
-     pct_rep & -0.388$^{***}$ & \\
+     Percent republican & -0.388$^{***}$ & \\
     & (0.030) & \\
-     rep_x_early_late & & -0.034$^{}$ \\
+     Republican$\times$Change in share & & -0.034$^{}$ \\
     & & (0.327) \\
     \hline \\[-1.8ex]
      Observations & 7721 & 7721 \\
