--- a/project.ipynb
+++ b/project.ipynb
@@ -399,7 +399,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\e'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\e'\n",
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\552584969.py:1: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\552584969.py:1: SyntaxWarning: invalid escape sequence '\\e'\n",
       "  election_data = pd.read_csv('data\\election-context-2018.csv')\n"
      ]
     },
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -667,14 +667,14 @@
       "\\caption{Table 3: Income Statistics by Zip Code}\n",
       "\\begin{tabular}{lrrr}\n",
       " & Median Household Income & Per Capita Income & Gini Index \\\\\n",
-      "count & 30600.000000 & 33045.000000 & 33501.000000 \\\\\n",
-      "mean & 73148.450000 & -8293391.340000 & -24078882.794100 \\\\\n",
-      "std & 31357.090000 & 74068228.620000 & 124391551.390800 \\\\\n",
-      "min & 2499.000000 & -666666666.000000 & -666666666.000000 \\\\\n",
-      "25% & 53481.500000 & 28256.000000 & 0.369800 \\\\\n",
-      "50% & 67017.000000 & 35231.000000 & 0.415400 \\\\\n",
-      "75% & 85313.000000 & 44613.000000 & 0.458300 \\\\\n",
-      "max & 250001.000000 & 419459.000000 & 1.000000 \\\\\n",
+      "Count & 30562 & 32208 & 32208.000000 \\\\\n",
+      "Mean & 73170 & 39472 & 0.414700 \\\\\n",
+      "Standard Deviation & 31347 & 18844 & 0.081300 \\\\\n",
+      "Minimum & 2499 & 421 & 0.001000 \\\\\n",
+      "25th Percentile & 53500 & 28762 & 0.376500 \\\\\n",
+      "Median & 67028 & 35573 & 0.418200 \\\\\n",
+      "75th Percentile & 85316 & 44910 & 0.460100 \\\\\n",
+      "Maximum & 250001 & 419459 & 1.000000 \\\\\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
       "\n"
@@ -682,15 +682,17 @@
     }
    ],
    "source": [
-    "# Create summary statistics for income-related columns\n",
+    "data_table = data_table[data_table['per_cap_inc'] >= 0]\n",
+    "data_table = data_table[data_table['gini_index'] >= 0]\n",
+    "\n",
     "income_summary = data_table[['med_hh_inc', 'per_cap_inc', 'gini_index']].describe()\n",
     "\n",
-    "# Rename columns for better readability\n",
     "income_summary.columns = ['Median Household Income', 'Per Capita Income', 'Gini Index']\n",
+    "income_summary.index = ['Count', 'Mean', 'Standard Deviation', 'Minimum', '25th Percentile', 'Median', '75th Percentile', 'Maximum']\n",
     "\n",
     "# Format numbers to be more readable\n",
-    "income_summary['Median Household Income'] = income_summary['Median Household Income'].round(2)\n",
-    "income_summary['Per Capita Income'] = income_summary['Per Capita Income'].round(2)\n",
+    "income_summary['Median Household Income'] = income_summary['Median Household Income'].astype(int)\n",
+    "income_summary['Per Capita Income'] = income_summary['Per Capita Income'].astype(int)\n",
     "income_summary['Gini Index'] = income_summary['Gini Index'].round(4)\n",
     "\n",
     "# Display the table with styling\n",
@@ -714,17 +716,17 @@
      "text": [
       "\\begin{table}\n",
       "\\caption{Table 4: Demographic Statistics by Zip Code}\n",
-      "\\begin{tabular}{lrrr}\n",
-      " & Total Population & White Population & Pct Republican \\\\\n",
-      "Count & 33503 & 33503 & 13268 \\\\\n",
-      "Mean & 126305 & 69805 & 0 \\\\\n",
-      "Standard Deviation & 297884 & 151441 & 0 \\\\\n",
-      "Minimum & 1 & 1 & 0 \\\\\n",
-      "25th Percentile & 1149 & 919 & 0 \\\\\n",
-      "Median & 8688 & 6824 & 0 \\\\\n",
-      "75th Percentile & 95961 & 59662 & 0 \\\\\n",
-      "Maximum & 6094116 & 2829875 & 0 \\\\\n",
-      "Range & 6094115 & 2829874 & 0 \\\\\n",
+      "\\begin{tabular}{lrr}\n",
+      " & White Population & Pct Republican \\\\\n",
+      "Count & 32208.000000 & 13016.000000 \\\\\n",
+      "Mean & 0.765480 & 0.204297 \\\\\n",
+      "Standard Deviation & 0.226515 & 0.069101 \\\\\n",
+      "Minimum & 0.000762 & 0.018569 \\\\\n",
+      "25th Percentile & 0.669562 & 0.156796 \\\\\n",
+      "Median & 0.859255 & 0.206333 \\\\\n",
+      "75th Percentile & 0.931172 & 0.250789 \\\\\n",
+      "Maximum & 1.000000 & 0.423777 \\\\\n",
+      "Range & 0.999238 & 0.405208 \\\\\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
       "\n"
@@ -733,10 +735,11 @@
    ],
    "source": [
     "# Update the variable names based on your data\n",
-    "demographic_summary = data_table[['total_pop', 'white', 'pct_rep']].describe().round(2)\n",
+    "data_table['pct_white'] = data_table['white'] / data_table['total_pop']\n",
+    "demographic_summary = data_table[['pct_white', 'pct_rep']].describe()\n",
     "\n",
     "# Create summary statistics for demographic-related columns\n",
-    "demographic_summary.columns = ['Total Population', 'White Population', 'Pct Republican']\n",
+    "demographic_summary.columns = ['White Population', 'Pct Republican']\n",
     "demographic_summary.index = ['Count', 'Mean', 'Standard Deviation', 'Minimum', '25th Percentile', 'Median', '75th Percentile', 'Maximum']\n",
     "demographic_summary.loc['Range'] = demographic_summary.loc['Maximum'] - demographic_summary.loc['Minimum']\n",
     "demographic_summary.loc['Count'] = demographic_summary.loc['Count'].astype(int)\n",
@@ -746,11 +749,6 @@
     "\n",
     "# Apply table styles\n",
     "styled_demographics = styled_demographics.set_table_attributes('style=\"width: 70%; margin: auto;\"')\n",
-    "\n",
-    "# Apply formatting\n",
-    "demographic_summary['Total Population'] = demographic_summary['Total Population'].astype(int)\n",
-    "demographic_summary['White Population'] = demographic_summary['White Population'].astype(int)\n",
-    "demographic_summary['Pct Republican'] = demographic_summary['Pct Republican'].astype(int)\n",
     "\n",
     "# Caption formatting\n",
     "styled_demographics = styled_demographics.set_table_styles([{\n",
@@ -847,7 +845,7 @@
      "text": [
       "<>:8: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:8: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\1897853385.py:8: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\1897853385.py:8: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  melted_data['year'] = melted_data['year'].str.extract('(\\d+)').astype(int)\n"
      ]
     },
@@ -990,7 +988,7 @@
      "text": [
       "<>:6: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:6: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\451903953.py:6: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\451903953.py:6: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  melted_data['year'] = melted_data['year'].str.extract('(\\d+)').astype(int)\n"
      ]
     },
@@ -1147,7 +1145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\1516833139.py:27: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\1516833139.py:27: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
       "  fig.subplots_adjust(wspace=0.3)\n"
      ]
     },
@@ -1210,7 +1208,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\1602334164.py:27: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\1602334164.py:27: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
       "  fig.subplots_adjust(wspace=0.3)\n"
      ]
     },
@@ -1273,7 +1271,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\2234367526.py:39: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\2234367526.py:39: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
       "  fig.subplots_adjust(wspace=0.3)\n"
      ]
     },
@@ -1435,13 +1433,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\2189008107.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\2189008107.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  reg_data['white_x_early_late_ratio'] = reg_data['white'] * reg_data['early_late_ratio']\n",
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\2189008107.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\2189008107.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1468,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1533,20 +1531,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\2476887300.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\2476887300.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  reg_data['gini_x_early_late'] = reg_data['gini_index'] * reg_data['early_late_ratio']\n",
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\2476887300.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\2476887300.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1570,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1635,20 +1633,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\3143901554.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\523599092.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  reg_data['rep_x_early_late'] = reg_data['pct_rep'] * reg_data['early_late_ratio']\n",
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_19012\\3143901554.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_6544\\523599092.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1662,7 +1660,7 @@
     "reg_data['rep_x_early_late'] = reg_data['pct_rep'] * reg_data['early_late_ratio']\n",
     "reg_data['intercept'] = 1\n",
     "X7 = reg_data[['intercept', 'early_late_ratio', 'pct_rep', 'msa_avg_value_ratio_2019']]\n",
-    "X8 = reg_data[['intercept', 'early_late_ratio', 'rep_x_early_late', 'msa_avg_value_ratio_2019']]\n",
+    "X8 = reg_data[['intercept', 'early_late_ratio', 'rep_x_early_late', 'msa_avg_value_ratio_2019', 'pct_rep']]\n",
     "y = reg_data['value_ratio_2017']\n",
     "model7 = sm.OLS(y, X7).fit()\n",
     "model8 = sm.OLS(y, X8).fit()"
@@ -1670,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1686,22 +1684,22 @@
       "\\\\[-1.8ex] & \\multicolumn{2}{c}{Home Value Change (%) (2010-2017)}  \\\\\n",
       "\\\\[-1.8ex] & (1) & (2) \\\\\n",
       "\\hline \\\\[-1.8ex]\n",
-      " early_late_ratio & 0.037$^{*}$ & 0.051$^{}$ \\\\\n",
-      "& (0.020) & (0.054) \\\\\n",
-      " intercept & 0.236$^{***}$ & 0.133$^{***}$ \\\\\n",
-      "& (0.013) & (0.010) \\\\\n",
-      " msa_avg_value_ratio_2019 & 0.787$^{***}$ & 0.806$^{***}$ \\\\\n",
+      " early_late_ratio & 0.036$^{*}$ & -0.023$^{}$ \\\\\n",
+      "& (0.020) & (0.053) \\\\\n",
+      " intercept & 0.236$^{***}$ & 0.237$^{***}$ \\\\\n",
+      "& (0.013) & (0.013) \\\\\n",
+      " msa_avg_value_ratio_2019 & 0.787$^{***}$ & 0.787$^{***}$ \\\\\n",
       "& (0.007) & (0.007) \\\\\n",
-      " pct_rep & -0.388$^{***}$ & \\\\\n",
-      "& (0.030) & \\\\\n",
-      " rep_x_early_late & & -0.034$^{}$ \\\\\n",
-      "& & (0.327) \\\\\n",
+      " pct_rep & -0.388$^{***}$ & -0.391$^{***}$ \\\\\n",
+      "& (0.030) & (0.031) \\\\\n",
+      " rep_x_early_late & & 0.389$^{}$ \\\\\n",
+      "& & (0.326) \\\\\n",
       "\\hline \\\\[-1.8ex]\n",
-      " Observations & 7721 & 7721 \\\\\n",
-      " $R^2$ & 0.670 & 0.663 \\\\\n",
-      " Adjusted $R^2$ & 0.670 & 0.663 \\\\\n",
-      " Residual Std. Error & 0.173 (df=7717) & 0.175 (df=7717) \\\\\n",
-      " F Statistic & 5231.599$^{***}$ (df=3; 7717) & 5071.551$^{***}$ (df=3; 7717) \\\\\n",
+      " Observations & 7719 & 7719 \\\\\n",
+      " $R^2$ & 0.670 & 0.670 \\\\\n",
+      " Adjusted $R^2$ & 0.670 & 0.670 \\\\\n",
+      " Residual Std. Error & 0.173 (df=7715) & 0.173 (df=7714) \\\\\n",
+      " F Statistic & 5230.789$^{***}$ (df=3; 7715) & 3923.663$^{***}$ (df=4; 7714) \\\\\n",
       "\\hline\n",
       "\\hline \\\\[-1.8ex]\n",
       "\\textit{Note:} & \\multicolumn{2}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\\\\n",
