update paper sections and revise publication date

--- a/documents/paper/paper.tex
+++ b/documents/paper/paper.tex
@@ -46,8 +46,8 @@ home-value appreciation is unclear, relative to the metropolitan
 statistical area. While the mean home value appreciation does decrease
 in the treatment group relative to the control, there is an incredibly
 high degree of variation in the data.
-
-\section{Methodology}
+\section{Model}
+\section{Method}
 \section{Results}
 \section{Conclusion}
 \section{References}
