--- a/extraneous/scraping.ipynb
+++ b/extraneous/scraping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "url = \"https://bostonpads.com/boston-apartments/\"\n",
+    "url = \"https://bostonpads.com/massachusetts-apartments-for-rent/\"\n",
     "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'}\n",
     "response = requests.get(url, headers=headers)\n",
     "print('Status code\\n', response.status_code)"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
